fix(front): #3236 align columns to the top
Former-commit-id: 8ccb556d69671a782e4ac5b4004808f3d2a438b3

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -472,6 +472,11 @@ $codeyellow: rgba(230, 219, 116, 1);
         text-align: center;
       }
     }
+
+    tbody {
+      vertical-align: top;
+    }
+
     tbody tr {
       background-color: $graylight;
     }
